@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 12/24/2013 ==
+Secrets (Akkadius): Perl $client->SilentMessage("Message"); addition, this is a pre-req for a Perl plugin I've shared with EQEmu. This function essentially mimics a player speaking with an NPC - which is used in popup window responses 
+
 == 12/16/2013 ==
 Kayen: Implemented SE_ArcheryDoubleAttack (Chance to do an extra archery attack)
 Kayen: Implemented SE_ShieldEquipDmgMod (Increase damage in primary hand if shield equiped)
